<resources>
    <string name="app_name">LembrarDeBeberAgua</string>
    <!-- Strings from Activity -->
    <string name="empty_field">Campo vazio</string>
    <string name="text_remember_me">Lembrar de mim</string>
    <string name="text_your_name">Seu nome (opcional)</string>
    <string name="text_name">%s,</string>
    <string name="text_your_age">Sua idade</string>
    <string name="text_your_weight">Seu peso (Kg)</string>
    <string name="text_reset">Redefinir</string>
    <string name="text_result">Resultado</string>
    <string name="text_remember">Lembrar</string>
    <string name="text_you_need_to_ingest">O seu consumo ideal é:</string>
    <string name="text_about"> O seu consumo é de:</string>
    <string name="text_alert">Definir lembrete</string>
    <string name="text_lt">Litros</string>
    <string name="text_calc">Calcular</string>
    <string name="legend_reset_image">Image de resete</string>
    <string name="legend_drinking_water">Image de homem bebendo agua</string>
    <string name="text_zero">00:00</string>
    <string name="text_ingest_bottle">garrafinha de 500ml</string>
    <string name="text_ingest_glass">copos de 250ml</string>
    <string name="text_loading">Carregando…</string>
    <string name="fill_in_the_fields">Preencha os campos acima</string>
    <string name="field_weight">Por favor informe seu peso por completo</string>

    <!-- Strings from Custom layout notification -->
    <string name="text_set_the_notification">Notificação</string>
    <string name="text_you_notification">Deseja receber notificações a cada uma hora?</string>
    <string name="text_define_one_hour">Receber notificação</string>

</resources>